--- a/timeline.html
+++ b/timeline.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/font.css">
   <link rel="stylesheet" href="./css/timeline.css">
-  <title>DMQD</title>
+  <title>恰祖国七十周年风华正茂</title>
   <script src="./js/jquery.js"></script>
 
 
